Style spacing fixes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,12 +35,17 @@ section {
   margin-bottom: 4rem;
 }
 
+footer {
+  margin-bottom: 2rem;
+}
+
 /* About Section */
 #about h1 {
   color: var(--background);
   font-size: 6rem;
   font-weight: 900;
-  margin-bottom: 2rem;
+  line-height: .8;
+  margin: 2rem 0;
   text-transform: uppercase;
   -webkit-text-stroke: 2px var(--primary);
 }
@@ -49,11 +54,15 @@ section {
   font-weight: bold;
   margin-bottom: 1rem;
 }
+#about h1 + p {
+  margin-bottom: 2rem;
+}
 #about p, #about ul {
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
 }
 #about strong {
   color: var(--primary);
+  font-size: 1.1rem;
   font-weight: 300;
 }
 #about ul {
